# sql-insert-generator

./: README.md  main.py  pyproject.toml  sql_generator.py  test_csv.sql  test_excel.sql
examples/: test_csv.sql  test_excel.sql
sql-insert-generator/: main.py  sql_generator.py
sql_insert_generator/: main.py  sql_generator.py
test_data/: test_excel.xlsx
